/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2020-03-24 19:10 UTC+0100 Wilfried Brunken DF7BE
  * source\common\editor\hcedit.prg
  * source\gtk\hbrowse.prg
    !
    ! Task:
    ! Modified Memo field now stored back to database
    ! for GTK.
    !
    ! hbrowse.prg:
    ! DATA oEdit
    !  
    ! STATIC FUNCTION VldBrwEdit( oBrw, fipos , bmemo)
    ! New parameter bmemo (.T. = store memo field)
    !
    ! Class HCEDIT:
    ! return last key (needed by memo edit):
    ! DATA nLastKey     INIT 0
    !
    ! class docu updated
    !


2020-03-22 13:30 UTC+0100 Wilfried Brunken DF7BE
  * samples\modtitle.prg (New)
  * samples\getupdown.prg (New)
    !
    ! getupdown.prg:
    ! Ticket #19 how to set updown value
    !
    ! modtitle.prg:
    ! A sample program modifies the title of the main
    ! window at run time.
    !
    ! In the future: if i create or modify a sample
    ! program i will add the following status info: 
    ! * Status:
    ! *  WinAPI   :  Yes/No
    ! *  GTK/Linux:  Yes/No
    ! *  GTK/Win  :  Yes/No
    ! 


2020-03-19 10:50 UTC+0100 Wilfried Brunken DF7BE
  * samples\sample.dbf (New)
  * samples\sample.dbt (New) 
  * source\gtk\hbrowse.prg
    !  
    ! sample.dbf/t: sample database,
    ! Contains one field per type N C D L M
    ! Open it with sample programs (a.prg,dbview.prg,...)
    ! C and M field contains german umlaute, sharp "S",
    ! Euro currency sign (CP858DE) , greek mue and degree sign.
    !
    !
    ! Ticket #32: Blank lines click in BROWSE.
    ! source\gtk\hbrowse.prg, METHOD ButtonUp(), at end of method added:
    !   ::Refresh()
    !   hwg_Setfocus( ::area )
    ! Adding this 2 instructions, all the blank lines are repainted.
    ! Feature copied (same in WinAPI): 
    ! "<memo>" or "<MEMO>": lower case indicates empty memo field.
    ! (A very helpful feature) 